--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -18,6 +18,7 @@
         android:text="@string/hello_blank_fragment" />
 
     <RadioGroup
+        android:id="@+id/options"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
