--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,14 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="50dp"
-        android:text="Instructions" />
+        android:text="Instructions"
+        android:textAlignment="center" />
 
     <Button
         android:id="@+id/button"
